2025-03-17T12:47:25Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/13899816995 # 882
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-03-17
* notice: last 14d: unq all: 16 72
* notice: prev accum: outdated-unq outdated-all / unq all: 1003 5205 / 1018 5276
* notice: next accum: outdated-unq outdated-all / unq all: 1003 5205 / 1019 5277
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2025-03-17]

2025-03-16T01:54:34Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/13878755363 # 879
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-03-16
* notice: last 14d: unq all: 15 71
* notice: prev accum: outdated-unq outdated-all / unq all: 1002 5202 / 1017 5274
* notice: next accum: outdated-unq outdated-all / unq all: 1003 5205 / 1018 5276
* notice: prev exec diff / last date diff / accum: unq all: +1 +2 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [2025-03-01] / [2025-03-15]

2025-03-15T01:46:12Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/13868259400 # 877
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-03-15
* notice: last 14d: unq all: 15 72
* notice: prev accum: outdated-unq outdated-all / unq all: 1000 5196 / 1017 5274
* notice: next accum: outdated-unq outdated-all / unq all: 1002 5202 / 1017 5274
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-02-28] / []

2025-03-14T01:46:48Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/13848171752 # 875