@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-03-17T12:47:25Z",
-  "count_outdated" : 5205,
-  "uniques_outdated" : 1003,
-  "count" : 5277,
-  "uniques" : 1019,
+  "timestamp" : "2025-03-18T01:49:16Z",
+  "count_outdated" : 5210,
+  "uniques_outdated" : 1004,
+  "count" : 5280,
+  "uniques" : 1021,
   "views" : [
-    {
-      "timestamp": "2025-03-03T00:00:00Z",
-      "count": 5,
-      "count_minmax": [ 5, 5 ],
-      "count_decinc": [ 0, 5 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-03-04T00:00:00Z",
       "count": 16,
@@ -79,12 +70,12 @@
     },
     {
       "timestamp": "2025-03-17T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
+      "count": 4,
+      "count_minmax": [ 1, 4 ],
+      "count_decinc": [ 0, 4 ],
+      "uniques": 3,
+      "uniques_minmax": [ 1, 3 ],
+      "uniques_decinc": [ 0, 3 ]
     }
   ]
 }
