@@ -1,12 +1,7 @@
 {
-  "count": 72,
-  "uniques": 16,
+  "count": 70,
+  "uniques": 17,
   "views": [
-    {
-      "timestamp": "2025-03-03T00:00:00Z",
-      "count": 5,
-      "uniques": 1
-    },
     {
       "timestamp": "2025-03-04T00:00:00Z",
       "count": 16,
@@ -44,8 +39,8 @@
     },
     {
       "timestamp": "2025-03-17T00:00:00Z",
-      "count": 1,
-      "uniques": 1
+      "count": 4,
+      "uniques": 3
     }
   ]
 }
